<resources>
    <string name="app_name">Demo04</string>
    <string name="txt_editorial">Editorial</string>
    <string name="txt_opt_add_editorial">Añadir Editorial</string>
    <string name="txt_opt_add_superhero">Añadir Superhéroe</string>

    <string name="txt_empty_field">Este campo no puede estar vacío</string>
    <string name="txt_superName">Nombre de súper</string>
    <string name="txt_realName">Nombre real</string>
    <string name="txt_favorite">Favorito</string>
    <string name="txt_save">Guardar</string>
    <string name="txt_delete">¿Borrar?</string>
    <string name="txt_deshacer">Borrar</string>
</resources>